@@ -75,6 +75,9 @@ EXAMPLE
 DEPENDENCIES
     Class::Utils, Unicode::Block::Item.
 
+SEE ALSO
+    Unicode::Block::Ascii, Unicode::Block::List.
+
 REPOSITORY
     <https://github.com/tupinek/Unicode-Block>
 
