@@ -1,4 +1,5 @@
 0.04
+ - Add SEE ALSO section to Unicode::Block doc.
  - Update Module::Install to 1.12 version.
 
 0.03 2014-08-26T03:04:50+02:00
